I'm not sure how this hasn't been caught yet, but in production we've observed emergency throttling spinning forever. It turns out that the timestamp is never updated.
I'm not sure how this hasn't been caught yet, but in production we've observed emergency throttling spinning forever. It turns out that the timestamp is never updated.