TS-1672: Emergency throttling can continue forever